recording only for non headless and non grid.